# platform-api

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
bigtable/: README.md
microframework/: README.md
microframework/express/: app.js  package.json
microframework/fastapi/: app.py  requirements.txt
microframework/flask/: app.py
microframework/sinatra/: Gemfile  app.rb
microframework/slim/: composer.phar  index.php  installer:Zone.Identifier
platform_api/: app.py
platform_api/api/v1/: __init__.py
platform_api/api/v1/resources/: items.py
