[tool.poetry]
name = "platform_api"
version = "0.1.0"
description = ""
authors = ["Ernane Sena <ernane.sena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
happybase = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
